<resources>
    <string name="App_Name">Vorratsübersicht (Beta)</string>
    <string name="App_Yes">Ja</string>
    <string name="App_No">Nein</string>
    <string name="App_Ok">OK</string>
    <string name="App_Cancel">Abbrechen</string>
    <string name="App_Save">Speichern</string>
    <string name="App_Replace">Ersetzen</string>
    <string name="App_Delete">Löschen</string>
    <string name="App_DeleteBig">LÖSCHEN</string>
    <string name="App_DoNotDelete">Nicht löschen</string>
    <string name="App_Insert">Hinzufügen</string>
    <string name="App_Create">Erstellen</string>
    <string name="App_Leter">Später</string>
    <string name="App_NotToday">Nicht heute</string>
    <string name="App_Share">Teile</string>
    <string name="App_Search">Suchen</string>
    <string name="App_Rename">Umbenennen</string>
    <string name="App_NoEntry">[Kein Eintrag]</string>
    <string name="App_NoDate">Kein Datum</string>
    <string name="App_ErrorOccurred">Fehler aufgetreten!</string>
    <string name="App_ChooseAction">Aktion wählen…</string>
    <string name="App_EnterQuantity">Anzahl eingeben:</string>
    <string name="App_CheckPermissions">Bitte prüfen Sie die Berechtigungen für Speicher in der \'App-Info\'.</string>
    <string name="Start_TestDbQuestion">Sie starten die Anwendung zum ersten Mal.\n\nZum Kennenlernen der Anwendung kann eine Testdatenbank aktiviert werden. Die Datenbanken können neben dem Zahnrad ausgewählt werden.</string>
    <string name="Start_PleaseWait">Bitte warten…</string>
    <string name="Main_DemnaechstZuVerbrauchen">Demnächst zu verbrauchen:</string>
    <string name="Main_ArticlesWithExpiryDate">%s Artikel nach dem Ablaufdatum</string>
    <string name="Main_ArticlesNearExpiryDate">%s Artikel demnächst verbrauchen</string>
    <string name="Main_CreateBackupNow">Backup der Datenbank erstellen?</string>
    <string name="Main_Database">Datenbank</string>
    <string name="Main_TestDatabase">ACHTUNG: Test Datenbank ist aktiv!</string>
    <string name="Main_OpenDatabase">Datenbank öffnen:</string>
    <string name="Main_Button_BestandNachKategorie">Bestand nach Kategorie</string>
    <string name="Main_Button_Lagerbestand">Lagerbestand</string>
    <string name="Main_Button_LagerbestandListe">Lagerbestandsliste</string>
    <string name="Main_Button_ArtikelListe">Artikeldaten</string>
    <string name="Main_Button_ArtikelScannen">Artikel scannen</string>
    <string name="Main_Button_Einkaufsliste">Einkaufsliste</string>
    <string name="Main_Button_Artikelangaben">Artikelangaben</string>
    <string name="Main_Button_AufEinkaufsliste">Auf Einkaufsliste</string>
    <string name="Main_Button_InLagerbestand">Von Einkaufsliste ins Lager</string>
    <string name="EanCodeScan_Title">EAN und QR Code Scan</string>
    <string name="EanCodeScan_OnOff">an/aus</string>
    <string name="EanCodeScan_Change">drehen</string>
    <string name="EanCodeScan_Test">Test</string>
    <string name="Settings_Title">Einstellungen</string>
    <string name="Settings_ArticleDefaults">Artikelangaben</string>
    <string name="Settings_AdditionalCategories">Zusätzliche Kategorien (mit Komma getrennt definieren)</string>
    <string name="Settings_CurrentDatabase">Aktuelle Datenbank</string>
    <string name="Settings_Datenbank">Datei: %s\n\nGröße: %s (%s Bytes)</string>
    <string name="Settings_DefaultCategory">Standard Kategorie für neue Artikel</string>
    <string name="Settings_BackupAndRestore">Backup und Restore</string>
    <string name="Settings_CreateBackup">Backup erstellen</string>
    <string name="Settings_ShareDatabaseFile">Datenbank Datei teilen</string>
    <string name="Settings_RestoreBackup">Backup zurückspielen</string>
    <string name="Settings_RestoreBackupFromFile">Backup aus Datei zurückspielen</string>
    <string name="Settings_Action_BackupRestore">Zurückspielen</string>
    <string name="Settings_Action_BackupDelete">Löschen</string>
    <string name="Settings_DeleteDatabase">Datenbank löschen</string>
    <string name="Settings_SelectBackupOrImport">Datenbank oder Backup auswählen:</string>
    <string name="Settings_SelectBackup">Backup auswählen:</string>
    <string name="Settings_NoDatabaseSelected">Keine Datenbank ausgewählt.</string>
    <string name="Settings_BackupFileCount">Anzahl Backups: %,d, Gesamtgröße: %,d</string>
    <string name="Settings_BackupPath">Backup-Pfad:</string>
    <string name="Settings_LastBackupOn">Letzter Backup am: %s</string>
    <string name="Settings_ChangesSinceLastBackup">Änderungen seit dem letzten Backup: %s</string>
    <string name="Settings_AskForBackup">An Backup alle 7 Tage erinnern</string>
    <string name="Settings_BackupDone">Datenbank im Download Verzeichnis gesichert als:\n\n {0}\n\nSichern Sie diese Datei auf Google Drive oder auf Ihren PC.</string>
    <string name="Settings_DatenbankKomprimieren">Datenbank komprimieren</string>
    <string name="Settings_DatenbankReparieren">Datenbank reparieren/checken</string>
    <string name="Settings_CurrentDatabaseOperation">Aktuelle Datenbank</string>
    <string name="Settings_DatabaseMove">Datenbank verschieben</string>
    <string name="Settings_DatabaseMove_ConfirmMessage">Die Datenbank \'%1$s\' befindet sich auf: %2$s.\n\nSoll diese nach: %3$s verschoben werden?</string>
    <string name="Settings_InternalStorage">Interner Speicher</string>
    <string name="Settings_SdCard">SD-Karte</string>
    <string name="Settings_CheckReport">Ergebnis der Prüfung:</string>
    <string name="Settings_DeleteBackupFileQuestion">Backup Datei löschen?\n\n{0}</string>
    <string name="Setting_StorageItems">Lagerverwaltung</string>
    <string name="Settings_DeleteStorageItems">Lagerbestand löschen…</string>
    <string name="Settings_DeleteStorageItemsSelection">Lager zum Läschen vom Bestand…</string>
    <string name="Settings_RenameStorageName">Lagername umbenennen</string>
    <string name="Settings_EnterNewStorageName">Neuen Namen eingeben:</string>
    <string name="Settings_DatabaseManagement">Datenbanken verwalten</string>
    <string name="Settings_DatabaseNew">Neue Datenbank anlegen…</string>
    <string name="Settings_DatabaseRename">Datenbank umbenennen…\n(außer der gerade geöffneten)</string>
    <string name="Settings_DatabaseRenameDialogTitle">Datenbank umbenennen</string>
    <string name="Settings_DatabaseRenameDialogMessage">\n\nNeuen Name eingeben:</string>
    <string name="Settings_DatabaseDelete">Datenbank löschen…\n(Auswahl folgt)</string>
    <string name="Settings_DatabaseRestore">Datenbank zurückspielen</string>
    <string name="Settings_DatabaseRestoreName">Welche Datenbank soll zurückgespiel werden?</string>
    <string name="Settings_DatabaseImport">Datenbank importieren</string>
    <string name="Settings_DatabaseImportName">Unter welchem Namen soll die Datenbank importiert werden?</string>
    <string name="Settings_DatabaseNewDialogTitle">Neue Datenbank erstellen</string>
    <string name="Settings_DatabaseNewDialogMessage">Name eingeben:</string>
    <string name="Settings_EAN_Scann">EAN Scan</string>
    <string name="Settings_EAN_Scann_UseFrontcamera">Benutze Frontkamera</string>
    <string name="Settings_TestDatenbank">Zum Kennenlernen oder Testen neuer Funktionalität</string>
    <string name="Settings_TestDatenbankZuruecksetzen">Test Datenbank mit Beispielen erstellen</string>
    <string name="Settings_TestDatenbankLeeren">Leere Testdatenbank erstellen</string>
    <string name="Settings_CSV_Export">CSV Export</string>
    <string name="Settings_CSV_Export_Articles">Artikelstamm</string>
    <string name="Settings_CSV_Export_Inventory">Lagerbestand</string>
    <string name="Settings_CSVSeparator">Feldtrennzeichen</string>
    <string name="Settings_CSVSeparator_Comma_Text">Komma</string>
    <string name="Settings_CSVSeparator_Semicolon_Text">Semikolon</string>
    <string name="Settings_CSVSeparator_Tab_Text">Tabulator</string>
    <string name="Settings_AdditionalOptions">Weitere Optionen</string>
    <string name="Settings_ShowOFFCostMessage">Kostenhinweis bei OpenFoodFacts.org anzeigen</string>
    <string name="Settings_ErrorSavingAdditionalDatabasePath">Der eingegebene zusätzlicher Datenbankpfad \'{0}\' existiert nicht oder Sie haben kein Zugriff dadrauf.</string>
    <string name="Settings_ConvertDatabaseForPicture">Es müssen {0} Bilder übertragen werden.\n\nBeenden Sie die App anschließend ganz und starten Sie diese neu.</string>
    <string name="Settings_CompressPictures">Bilder komprimieren</string>
    <string name="Settings_Compress_854">854</string>
    <string name="Settings_Compress_1024">1.024</string>
    <string name="Settings_Compress_1280">1280</string>
    <string name="Settings_Compress_1536">1.536</string>
    <string name="Settings_Support">Support</string>
    <string name="Settings_SendLogFile">LOG Einträge an Entwickler schicken</string>
    <string name="Settings_ShowLogFile">LOG Einträge anzeigen / senden</string>
    <string name="Settings_SendLogFileMessage">
        LOG Einträge an den Entwickler schicken?
        \n\nIhre E-Mail Adresse wird dem Entwickler als \'Absender\' angezeigt.
        Es werden keine privaten Daten versendet.
        Vor dem Senden können Sie die Daten noch betrachten.
    </string>
    <string name="Settings_Contact_Email">Kontakt E-Mail: <a href="mailto:cstryi@freenet.de">cstryi@freenet.de</a></string>
    <string name="Settings_AppWiki">App Wiki (Deutsch)</string>
    <string name="Settings_AppWiki_Page">https://github.com/Stryi/Vorratsuebersicht2/wiki</string>
    <string name="Settings_Datenschutz">Datenschutzerklärung</string>
    <string name="Settings_Datenschutz_Link">https://sites.google.com/site/vorratsuebersicht/datenschutzerklaerung</string>
    <string name="Settings_Licenses">Lizenzbedingungen</string>
    <string name="Settings_OpenSourceLizenzen">Open-Source-Lizenzen</string>
    <string name="Settings_OpenSourceLizenzenText">This app uses the following open source libraries:

- AndroidX libraries – Apache License 2.0
- Material Components for Android – Apache License 2.0
- ZXing Android Embedded – Apache License 2.0
- OkHttp – Apache License 2.0
- Gson – Apache License 2.0

Licensed under the Apache License, Version 2.0
http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="ArticleList_Title">Artikeldaten</string>
    <string name="ArticleList_AllCategories">[Alle Kategorien]</string>
    <string name="ArticleList_NoCategories">[Ohne Kategorie / Unterkategorie]</string>
    <string name="ArticleList_ToShoppingList">Auf Einkaufsliste</string>
    <string name="ArticleList_Lagerbestand">Lagerbestand</string>
    <string name="ArticleList_Menu_Add">Neuen Artikel anlegen</string>
    <string name="ArticleList_Menu_Filter">Filter</string>
    <string name="ArticleList_SpecialFilter">Filter: {0}</string>
    <string name="ArticleList_SpecialFilterClose">Filter schließen</string>
    <string-array name="ArticleListeSpecialFilter">
        <item>Kein Preis angegeben</item>
        <item>Ohne Kalorienangaben</item>
        <item>Für die Einkaufsliste</item>
        <item>Kein Standard Lagerort angegeben</item>
    </string-array>
    <string name="ArticleDetails_Menu_DeleteArticle">Artikel löschen</string>
    <string name="ArticleDetails_Menu_CreatePicture">Bild erstellen</string>
    <string name="ArticleDetails_Menu_SelectPicture">Bild auswählen</string>
    <string name="ArticleDetails_Menu_ShowPicture">Bild bearbeiten</string>
    <string name="ArticleDetails_Menu_RemovePicture">Bild entfernen</string>
    <string name="ArticleDetails_Menu_EAN_Scannen">EAN Scannen</string>
    <string name="ArticleDetails_Menu_ToShoppingList">Auf Einkaufsliste</string>
    <string name="ArticleDetails_Menu_CurrentStock">Lagerbestand</string>
    <string name="ArticleDetails_Menu_SearchOpenFoodFacts">Suche auf OpenFoodFacts.org</string>
    <string name="ArticleDetails_Category">Kategorie:</string>
</resources>