<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/ArticleDetailsMenu_Cancel"
        android:icon="@drawable/close_24px"
        android:title="@string/App_Cancel"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/ArticleDetailsMenu_Save"
        android:icon="@drawable/check_24px"
        android:title="@string/App_Save"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always" />

    <item android:id="@+id/ArticleDetailsMenu_ToShoppingList"
        android:icon="@drawable/shopping_cart_24px"
        android:title="@string/ArticleDetails_Menu_ToShoppingList"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always" />

    <item android:id="@+id/ArticleDetailsMenu_MakeAPhoto"
        android:icon="@drawable/photo_camera_24px"
        android:title="@string/ArticleDetails_Menu_CreatePicture"
        app:iconTint="@color/Application_ActionBar_TextColor" />

    <item android:id="@+id/ArticleDetailsMenu_SelectAPicture"
        android:icon="@drawable/photo_24px"
        android:title="@string/ArticleDetails_Menu_SelectPicture"
        app:iconTint="@color/Application_ActionBar_TextColor" />

    <item android:id="@+id/ArticleDetailsMenu_ShowPicture"
        android:icon="@drawable/photo_camera_24px"
        android:title="@string/ArticleDetails_Menu_ShowPicture"
        app:iconTint="@color/Application_ActionBar_TextColor" />

    <item android:id="@+id/ArticleDetailsMenu_RemovePicture"
        android:icon="@drawable/hide_image_24px"
        android:title="@string/ArticleDetails_Menu_RemovePicture"
        app:iconTint="@color/Application_ActionBar_TextColor" />

    <item android:id="@+id/ArticleDetailsMenu_ScanEAN"
        android:icon="@drawable/barcode_40px"
        android:title="@string/ArticleDetails_Menu_EAN_Scannen"
        app:iconTint="@color/Application_ActionBar_TextColor" />

    <item android:id="@+id/ArticleDetailsMenu_Delete"
        android:icon="@drawable/delete_24px"
        app:iconTint="@color/Application_ActionBar_TextColor"
        android:title="@string/ArticleDetails_Menu_DeleteArticle" />

    <item android:id="@+id/ArticleDetailsMenu_ToStorageQuantity"
        android:icon="@drawable/assignment_24px"
        android:title="@string/ArticleDetails_Menu_CurrentStock"
        app:iconTint="@color/Application_ActionBar_TextColor" />

    <item android:id="@+id/ArticleDetailsMenu_InternetDB"
        android:icon="@drawable/search_24px"
        android:title="@string/ArticleDetails_Menu_SearchOpenFoodFacts"
        app:iconTint="@color/Application_ActionBar_TextColor" />

</menu>